--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -14,4 +14,4 @@
 
 <h3>This is where you need to go:</h3>
 <!-- Example Google Maps Link -->
-<a href="//www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Google Map Link</a>
+<a href="://www.google.com/maps/place/Robelle+Domain/@-27.6817967,152.9060414,17z/data=!4m6!3m5!1s0x6b914a1406c68cd9:0xb6ba6e225040d7b9!8m2!3d-27.681497!4d152.9036349!16s%2Fg%2F1thbwv79?entry=ttu&g_ep=EgoyMDI1MDUyOC4wIKXMDSoASAFQAw%3D%3D">Google Map Link</a>
